// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders a addon after the input if addonAfter is passed 1`] = `
<Input
  addonAfter=".00"
  bsStyle={null}
  buttonAfter={null}
  help=""
  id="inputWithAddon"
  label=""
  placeholder=""
  type="text"
>
  <Component
    controlId="inputWithAddon"
    validationState={null}
  >
    <FormGroup__StyledFormGroup
      controlId="inputWithAddon"
      validationState={null}
    >
      <FormGroup
        bsClass="form-group"
        className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy"
        controlId="inputWithAddon"
        validationState={null}
      >
        <div
          className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy form-group"
        >
          <InputWrapper>
            <span>
              <InputGroup
                bsClass="input-group"
              >
                <InputGroup
                  bsClass="input-group"
                >
                  <span
                    className="input-group"
                  >
                    <FormControl
                      componentClass="input"
                      inputRef={[Function]}
                      label=""
                      name="inputWithAddon"
                      placeholder=""
                      type="text"
                    >
                      <FormControl
                        bsClass="form-control"
                        className="FormControl-sc-1amoaox-0 kmJcge"
                        componentClass="input"
                        inputRef={[Function]}
                        label=""
                        name="inputWithAddon"
                        placeholder=""
                        type="text"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 kmJcge form-control"
                          id="inputWithAddon"
                          label=""
                          name="inputWithAddon"
                          placeholder=""
                          type="text"
                        />
                      </FormControl>
                    </FormControl>
                    <Addon
                      bsClass="input-group-addon"
                    >
                      <InputGroup__StyledAddon
                        className="input-group-addon"
                      >
                        <StyledBootstrapInputAddon
                          className="InputGroup__StyledAddon-sc-1a8jz8l-0 hIsRCw input-group-addon"
                        >
                          <InputGroupAddon
                            bsClass="InputGroup__StyledAddon-sc-1a8jz8l-0 hIsRCw input-group-addon"
                          >
                            <span
                              className="InputGroup__StyledAddon-sc-1a8jz8l-0 hIsRCw input-group-addon"
                            >
                              .00
                            </span>
                          </InputGroupAddon>
                        </StyledBootstrapInputAddon>
                      </InputGroup__StyledAddon>
                    </Addon>
                  </span>
                </InputGroup>
              </InputGroup>
            </span>
          </InputWrapper>
        </div>
      </FormGroup>
    </FormGroup__StyledFormGroup>
  </Component>
</Input>
`;

exports[`Input renders a button after the input if buttonAfter is passed 1`] = `
<Input
  addonAfter={null}
  bsStyle={null}
  buttonAfter={<ForwardRef />}
  help=""
  id="inputWithButton"
  label=""
  placeholder=""
  type="text"
>
  <Component
    controlId="inputWithButton"
    validationState={null}
  >
    <FormGroup__StyledFormGroup
      controlId="inputWithButton"
      validationState={null}
    >
      <FormGroup
        bsClass="form-group"
        className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy"
        controlId="inputWithButton"
        validationState={null}
      >
        <div
          className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy form-group"
        >
          <InputWrapper>
            <span>
              <InputGroup
                bsClass="input-group"
              >
                <InputGroup
                  bsClass="input-group"
                >
                  <span
                    className="input-group"
                  >
                    <FormControl
                      componentClass="input"
                      inputRef={[Function]}
                      label=""
                      name="inputWithButton"
                      placeholder=""
                      type="text"
                    >
                      <FormControl
                        bsClass="form-control"
                        className="FormControl-sc-1amoaox-0 kmJcge"
                        componentClass="input"
                        inputRef={[Function]}
                        label=""
                        name="inputWithButton"
                        placeholder=""
                        type="text"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 kmJcge form-control"
                          id="inputWithButton"
                          label=""
                          name="inputWithButton"
                          placeholder=""
                          type="text"
                        />
                      </FormControl>
                    </FormControl>
                    <Button
                      bsClass="input-group-btn"
                    >
                      <InputGroupButton
                        bsClass="input-group-btn"
                      >
                        <span
                          className="input-group-btn"
                        >
                          <ForwardRef>
                            <Button__StyledButton>
                              <Button
                                active={false}
                                block={false}
                                bsClass="btn"
                                bsStyle="default"
                                className="Button__StyledButton-c9cbmb-0 laZUlH"
                                disabled={false}
                              >
                                <button
                                  className="Button__StyledButton-c9cbmb-0 laZUlH btn btn-default"
                                  disabled={false}
                                  type="button"
                                />
                              </Button>
                            </Button__StyledButton>
                          </ForwardRef>
                        </span>
                      </InputGroupButton>
                    </Button>
                  </span>
                </InputGroup>
              </InputGroup>
            </span>
          </InputWrapper>
        </div>
      </FormGroup>
    </FormGroup__StyledFormGroup>
  </Component>
</Input>
`;

exports[`Input renders a checkbox addon after the input if addonAfter is passed 1`] = `
<Input
  addonAfter={
    <input
      aria-label="..."
      id="addonCheckbox"
      type="checkbox"
    />
  }
  bsStyle={null}
  buttonAfter={null}
  help=""
  id="inputWithCheckboxAddon"
  label=""
  placeholder=""
  type="text"
>
  <Component
    controlId="inputWithCheckboxAddon"
    validationState={null}
  >
    <FormGroup__StyledFormGroup
      controlId="inputWithCheckboxAddon"
      validationState={null}
    >
      <FormGroup
        bsClass="form-group"
        className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy"
        controlId="inputWithCheckboxAddon"
        validationState={null}
      >
        <div
          className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy form-group"
        >
          <InputWrapper>
            <span>
              <InputGroup
                bsClass="input-group"
              >
                <InputGroup
                  bsClass="input-group"
                >
                  <span
                    className="input-group"
                  >
                    <FormControl
                      componentClass="input"
                      inputRef={[Function]}
                      label=""
                      name="inputWithCheckboxAddon"
                      placeholder=""
                      type="text"
                    >
                      <FormControl
                        bsClass="form-control"
                        className="FormControl-sc-1amoaox-0 kmJcge"
                        componentClass="input"
                        inputRef={[Function]}
                        label=""
                        name="inputWithCheckboxAddon"
                        placeholder=""
                        type="text"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 kmJcge form-control"
                          id="inputWithCheckboxAddon"
                          label=""
                          name="inputWithCheckboxAddon"
                          placeholder=""
                          type="text"
                        />
                      </FormControl>
                    </FormControl>
                    <Addon
                      bsClass="input-group-addon"
                    >
                      <InputGroup__StyledAddon
                        className="input-group-addon"
                      >
                        <StyledBootstrapInputAddon
                          className="InputGroup__StyledAddon-sc-1a8jz8l-0 hIsRCw input-group-addon"
                        >
                          <InputGroupAddon
                            bsClass="InputGroup__StyledAddon-sc-1a8jz8l-0 hIsRCw input-group-addon"
                          >
                            <span
                              className="InputGroup__StyledAddon-sc-1a8jz8l-0 hIsRCw input-group-addon"
                            >
                              <input
                                aria-label="..."
                                id="addonCheckbox"
                                type="checkbox"
                              />
                            </span>
                          </InputGroupAddon>
                        </StyledBootstrapInputAddon>
                      </InputGroup__StyledAddon>
                    </Addon>
                  </span>
                </InputGroup>
              </InputGroup>
            </span>
          </InputWrapper>
        </div>
      </FormGroup>
    </FormGroup__StyledFormGroup>
  </Component>
</Input>
`;

exports[`Input renders input w/ \`name\` attribute w/ setting prop 1`] = `
<Input
  addonAfter={null}
  bsStyle={null}
  buttonAfter={null}
  help=""
  id="inputWithoutNameProp"
  label=""
  name="inputWithNameProp"
  placeholder=""
  type="text"
>
  <Component
    controlId="inputWithoutNameProp"
    validationState={null}
  >
    <FormGroup__StyledFormGroup
      controlId="inputWithoutNameProp"
      validationState={null}
    >
      <FormGroup
        bsClass="form-group"
        className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy"
        controlId="inputWithoutNameProp"
        validationState={null}
      >
        <div
          className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy form-group"
        >
          <InputWrapper>
            <span>
              <FormControl
                componentClass="input"
                inputRef={[Function]}
                label=""
                name="inputWithNameProp"
                placeholder=""
                type="text"
              >
                <FormControl
                  bsClass="form-control"
                  className="FormControl-sc-1amoaox-0 kmJcge"
                  componentClass="input"
                  inputRef={[Function]}
                  label=""
                  name="inputWithNameProp"
                  placeholder=""
                  type="text"
                >
                  <input
                    className="FormControl-sc-1amoaox-0 kmJcge form-control"
                    id="inputWithoutNameProp"
                    label=""
                    name="inputWithNameProp"
                    placeholder=""
                    type="text"
                  />
                </FormControl>
              </FormControl>
            </span>
          </InputWrapper>
        </div>
      </FormGroup>
    </FormGroup__StyledFormGroup>
  </Component>
</Input>
`;

exports[`Input renders input w/ \`name\` attribute w/o setting prop 1`] = `
<Input
  addonAfter={null}
  bsStyle={null}
  buttonAfter={null}
  help=""
  id="inputWithoutNameProp"
  label=""
  placeholder=""
  type="text"
>
  <Component
    controlId="inputWithoutNameProp"
    validationState={null}
  >
    <FormGroup__StyledFormGroup
      controlId="inputWithoutNameProp"
      validationState={null}
    >
      <FormGroup
        bsClass="form-group"
        className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy"
        controlId="inputWithoutNameProp"
        validationState={null}
      >
        <div
          className="FormGroup__StyledFormGroup-sc-1wv4cm9-0 giUuGy form-group"
        >
          <InputWrapper>
            <span>
              <FormControl
                componentClass="input"
                inputRef={[Function]}
                label=""
                name="inputWithoutNameProp"
                placeholder=""
                type="text"
              >
                <FormControl
                  bsClass="form-control"
                  className="FormControl-sc-1amoaox-0 kmJcge"
                  componentClass="input"
                  inputRef={[Function]}
                  label=""
                  name="inputWithoutNameProp"
                  placeholder=""
                  type="text"
                >
                  <input
                    className="FormControl-sc-1amoaox-0 kmJcge form-control"
                    id="inputWithoutNameProp"
                    label=""
                    name="inputWithoutNameProp"
                    placeholder=""
                    type="text"
                  />
                </FormControl>
              </FormControl>
            </span>
          </InputWrapper>
        </div>
      </FormGroup>
    </FormGroup__StyledFormGroup>
  </Component>
</Input>
`;
